# 3d_point_cloud_view_reactjs

./: .gitignore  DEBUG_SERVICES.md  PERFORMANCE_GUIDE.md  ROS_BRIDGE_INTEGRATION.md  check_camera_topics.sh  frames_2025-07-06_15.58.15.gv  infor.txt  launch_optimized.sh  optimize_system.sh  readme.MD  setup_dashboard.sh  start_debug_terminals.sh
config/: routerconfig.json5
pointcloud-dashboard/: BATTERY_SYSTEM.md  COORDINATE_ALIGNMENT_FIX.md  ENHANCED_SYSTEM_MONITORING.md  ENVIRONMENTAL_SENSORS.md  NAVIGATION_FEATURES.md  README.md  ROBOT_CONTROL_README.md  ROBOT_STATUS.md  WAYPOINT_NAVIGATION_FIX.md  WIDGET_SYSTEM.md  battery_test_publisher.py  cuda_accelerator.py  package.json  test_camera_connection.html  tsconfig.json  webpack.config.js
pointcloud-dashboard/public/: index.html
pointcloud-dashboard/src/: App.css  App.tsx
pointcloud-dashboard/src/components/: BatteryDashboard.css  BatteryDashboard.tsx  BatteryWidget.css  BatteryWidget.tsx  (+46 more)
pointcloud-dashboard/test_publishers/: README.md  battery_test_publisher.py  camera_test_publisher.py  environmental_sensor_test_publisher.py  imu_test_publisher.py  occupancy_map_test_publisher.py  pointcloud_test_publisher.py  robot_control_test_publisher.py  robot_status_test_publisher.py  run_all_test_publishers.py  setup_test_environment.sh  start_test_publishers.sh  system_monitoring_test_publisher.py
screenshots/: README.md
src/zed_rtabmap_demo/: CMakeLists.txt  package.xml
src/zed_rtabmap_demo/launch/: enhanced_navigation_demo.launch.py  zed_3d_mapping.launch.py
src/zed_rtabmap_demo/rviz/: zed_3d_mapping.rviz
