<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_rtabmap_demo</name>
  <version>0.0.0</version>
  <description>ZED Camera 3D SLAM mapping demo using RTAB-Map</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>rtabmap_sync</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
